--- a/css/index.css
+++ b/css/index.css
@@ -14,30 +14,52 @@ header {
 
 /* Navigation styling start */
 
-.siteNav {	
-	height: 50px;
+.siteNav {
 	margin: 15px auto 0 auto;
 }
+
+.siteNav ul {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
+
 .siteNav a {	
 	color: #fff;
+	padding: 10px 10px;
 	text-decoration: none;
 /* diplay: block; to make the link fill the li area */
 	display: block;
-	transform: skewX(-15deg);	
 }
+
 .siteNav li {
 	list-style: none;
-	float: left;
-	width: 15%;
-	height: 50px;
-	font-size: 150%;
+	flex-basis: 15%;
 	text-align: center;
 	margin: 0 10px 10px 0;
-	line-height: 50px;
-	transform: skewX(15deg);
+	align-content: center;
 	transition: all 1s;
 	background-color: hsl(168, 100%, 30%);
 }
+
+@media (max-width: 968px) {
+	.siteNav li {
+		flex-basis: 30%;
+	}
+	h1 {
+		font-size: 1.5rem;
+	}
+}
+
+@media (min-width: 968px) {
+	.siteNav li {
+		transform: skewX(15deg);
+	}
+	.siteNav a {
+		transform: skewX(-15deg);
+	}
+}
+
 .siteNav li:hover {
 	background-color: hsl(168, 100%, 50%);
 	transition: all 1s;
@@ -51,7 +73,7 @@ header {
 /* Container style starts */
 .container {
 	margin: 0 auto 0 auto;
-	width: 60%;
+	width: 75%;
 	padding-bottom: 100px;
 	box-sizing: border-box;
 }
