--- a/css/index.css
+++ b/css/index.css
@@ -42,9 +42,20 @@ header {
 	background-color: hsl(168, 100%, 30%);
 }
 
-@media (max-width: 968px) {
+@media (max-width: 568px) {
 	.siteNav li {
-		flex-basis: 30%;
+		flex-basis: 48%;
+		margin: 0 5px 5px 0;
+	}
+	h1 {
+		font-size: 1.5rem;
+	}
+}
+
+@media only screen and (max-width: 968px) and (min-width: 569px) {
+	.siteNav li {
+		flex-basis: 32%;		
+		margin: 0 5px 5px 0;
 	}
 	h1 {
 		font-size: 1.5rem;
@@ -57,6 +68,9 @@ header {
 	}
 	.siteNav a {
 		transform: skewX(-15deg);
+	}
+	.container {
+		width: 60%;
 	}
 }
 
@@ -73,7 +87,6 @@ header {
 /* Container style starts */
 .container {
 	margin: 0 auto 0 auto;
-	width: 75%;
 	padding-bottom: 100px;
 	box-sizing: border-box;
 }
