--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -18,7 +18,7 @@ body {
     position: fixed;
     width: 100vw;
     display: flex;
-    z-index: 4;
+    z-index: 11;
     height: 60px;
     background-color: var(--lightBlueTransparent);
 }
@@ -148,11 +148,7 @@ body {
     font-weight: 200;
     // text-shadow: 0 0 2px #fff;
 }
-@media (max-width: 400px) {
-    #welcome-section_heading {
-        font-size: 1.1rem;
-    }
-}
+
 .triangle {
     background-color: #fff;
     height: 5px;
@@ -199,20 +195,42 @@ body {
     }
 }
 @media (max-width: 400px) {
+    #welcome-section {
+        display: flex;
+    }
+    .welcome-section_text {
+        display: flex;
+        flex-direction: column;
+        position: static;
+        margin: auto;
+        transform: none;
+        height: 45%;
+        width: 80%;
+        z-index: 10 !important;
+    }
+    #profile-picture {
+        margin: 0 auto;
+    }
+    #welcome-section_heading {
+        font-size: 1rem;
+    }
+    #welcome-section_sub-heading {
+        font-size: 0.7rem;
+    }
     .arrow-double-link {
         width: 100px;
         height: 50px;
     }
     #earth {
-        height: 300px;
-        width: 300px;
-        top: 50%;
-        left: 50%;
+        height: 700px;
+        width: 700px;
+        top: -6%;
+        left: -19%;
         transform: translateX(-50%) translateY(-50%);
     }
     #astronaut {
-        height: 150px;
-        top: 39%;
+        height: 100px;
+        top: 7%;
         left: 31%;
     }
     .triangle {
